--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,4 +20,4 @@ jobs:
       run: pwd
     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-      run: docker build -f Dockerfile --tag idiom-handler:$(date +%s)
+      run: docker build --f Dockerfile --tag idiom-handler:$(date +%s)
