--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     implementation 'junit:junit:4.13.2'
     implementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    developmentOnly 'org.springf' +
+            'ramework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
