--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -1,4 +1,4 @@
-FROM openjdk:8u191-jdk-alpine3.9
+FROM azul/zulu-openjdk:11-latest
 ADD build/libs/idiom-0.0.1-SNAPSHOT.jar .
 EXPOSE 8000
 CMD java -jar idiom-0.0.1-SNAPSHOT.jar
