--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #logging.level.root=off
 server.port=8000
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgresDB
 spring.datasource.username=user
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
